--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <li><a href="#"><i class="fas fa-car"></i>About Us </a></li>
                             <li><a href="#"><i class="fas fa-taxi"></i>Our Services  </a></li>
                             <li><a href="#"><i class="fas fa-user"></i>Driver Hire  </a></li>
-                            <li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>
+                            <!--<li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>-->
                             <li><a href="#"><i class="far fa-address-book"></i>Contact  </a></li>
                             <!--<li class="drop-down">
                                 <a href="#"><i class="fas fa-chart-line"></i>Reports </a>
@@ -134,27 +134,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Nam libero tempore</h2>
-                                <p class="animate__animated animate__fadeInUp">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
-                                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
 
                 <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
