--- a/contact.html
+++ b/contact.html
@@ -96,73 +96,32 @@
 
     </div>
     <!-- =============================== End Nav ========================== -->
-    <!-- =========================== Start Slider ========================== -->
-    <section id="intro">
-        <div class="intro-container">
-            <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
-
-                <ol class="carousel-indicators"></ol>
-
-                <div class="carousel-inner" role="listbox">
-
-                    <div class="carousel-item active" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
-                                <p class="animate__animated animate__fadeInUp">Have a car but don’t have a driver? Well we have the solution for you. Here at Vision Drivers we are happy and ready to help. We provide Call Driver Services to get you moving whether it is a long cross country drive or just within the City. Book our Call Drivers Service for a day or even half.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Big Relief from City Traffic</h2>
-                                <p class="animate__animated animate__fadeInUp">
-                                    Use Traffic well - Catch up on your sleep. Complete your office presentation.
-                                    Hassle free solution. Hire drivers from Vision Drivers to drive you around. Experience the professionalism of driving with Vision Drivers.
-                                </p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Planning for an Outstation Trip</h2>
-                                <p class="animate__animated animate__fadeInUp">Available at your disposal are professional drivers and a range of well maintained vehicles across segments (Hatchback, Sedan, MUV) that can be tracked on real time basis. Book our Driver or Cab through Phone, Online or App.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
+    <!-- =============================== Start Page Title =========================== -->
+    <div class="container-fluid page-header-title">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Contact</h2>
                 </div>
-
-                <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-
-                <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-
-            </div>
-        </div>
-    </section>
-    <!-- ================================= End Slider  ============================== -->
-    <!-- ========================== Start Welcome Section =========================== -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 welcome-secion">
-                <h2>Welcome to Vision Drivers</h2>
-                <p>Vision Driver is the pioneer in driver hire services with satisfied customers and growing. The company is currently operational Chennai and has a large team of experienced, reliable and professional car drivers for hire having through knowledge of the city. We do a thorough criminal background check on all our car drivers in Chennai before confirming them permanently in our system. Customers can hire a driver 24*7 (incl. holidays) whenever they need, either through Phone, Online or App booking.</p>
             </div>
         </div>
     </div>
-    <!-- ========================== End Welcome Section =========================== -->
+    <!-- =============================== End Page Title =========================== -->
+    <!-- =============================== Start Page Content =========================== -->
+    <div class="container page-content">
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="contact-list">
+                    <li><i class="fa fa-phone-volume"></i>237 433 33</li>
+                    <li>
+                        <i class="fab fa-whatsapp"></i>98407 43333
+                    </li>
+                    <li><i class="fa fa-globe"></i>www.visiondrivers.com</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- =============================== End Page Content =========================== -->
     <!-- ========================== Start Footer Section ========================= -->
     <footer>
         <div class="container-fluid footer-top">
