--- a/hiredriver.html
+++ b/hiredriver.html
@@ -76,7 +76,7 @@
                             <li class=""><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
                             <li><a href="about.html"><i class="fas fa-car"></i>About Us </a></li>
                             <li><a href="services.html"><i class="fas fa-taxi"></i>Our Services  </a></li>
-                            <!--<li><a href="hiredriver.html"><i class="fas fa-user"></i>Driver Hire  </a></li>-->
+                            <li><a href="hiredriver.html"><i class="fas fa-user"></i>Driver Hire  </a></li>
                             <!--<li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>-->
                             <li><a href="contact.html"><i class="far fa-address-book"></i>Contact  </a></li>
                             <!--<li class="drop-down">
@@ -96,73 +96,36 @@
 
     </div>
     <!-- =============================== End Nav ========================== -->
-    <!-- =========================== Start Slider ========================== -->
-    <section id="intro">
-        <div class="intro-container">
-            <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
-
-                <ol class="carousel-indicators"></ol>
-
-                <div class="carousel-inner" role="listbox">
-
-                    <div class="carousel-item active" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
-                                <p class="animate__animated animate__fadeInUp">Have a car but don’t have a driver? Well we have the solution for you. Here at Vision Drivers we are happy and ready to help. We provide Call Driver Services to get you moving whether it is a long cross country drive or just within the City. Book our Call Drivers Service for a day or even half.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Big Relief from City Traffic</h2>
-                                <p class="animate__animated animate__fadeInUp">
-                                    Use Traffic well - Catch up on your sleep. Complete your office presentation.
-                                    Hassle free solution. Hire drivers from Vision Drivers to drive you around. Experience the professionalism of driving with Vision Drivers.
-                                </p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
-                        <div class="carousel-container">
-                            <div class="container">
-                                <h2 class="animate__animated animate__fadeInDown">Planning for an Outstation Trip</h2>
-                                <p class="animate__animated animate__fadeInUp">Available at your disposal are professional drivers and a range of well maintained vehicles across segments (Hatchback, Sedan, MUV) that can be tracked on real time basis. Book our Driver or Cab through Phone, Online or App.</p>
-                                <!--<a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>-->
-                            </div>
-                        </div>
-                    </div>
+    <!-- =============================== Start Page Title =========================== -->
+    <div class="container-fluid page-header-title">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Driver Hire</h2>
                 </div>
-
-                <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-
-                <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-
-            </div>
-        </div>
-    </section>
-    <!-- ================================= End Slider  ============================== -->
-    <!-- ========================== Start Welcome Section =========================== -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 welcome-secion">
-                <h2>Welcome to Vision Drivers</h2>
-                <p>Vision Driver is the pioneer in driver hire services with satisfied customers and growing. The company is currently operational Chennai and has a large team of experienced, reliable and professional car drivers for hire having through knowledge of the city. We do a thorough criminal background check on all our car drivers in Chennai before confirming them permanently in our system. Customers can hire a driver 24*7 (incl. holidays) whenever they need, either through Phone, Online or App booking.</p>
             </div>
         </div>
     </div>
-    <!-- ========================== End Welcome Section =========================== -->
+    <!-- =============================== End Page Title =========================== -->
+    <!-- =============================== Start Page Content =========================== -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Benefits of Hiring from Vision Drivers</h4>
+                <p>
+                    Large team of experienced, reliable & professional drivers having thorough knowledge of the city.
+                    All our drivers have a minimum of 3+ years driving experience.
+                    All our drivers on-call undergo a thorough background and criminal record check.
+                    Ease of booking: Auto-IVR, Online & App booking facility for driver hire services.
+                    On demand drivers can be hired 24 * 7 basis incl. holidays.
+                    Ability to service a radius of 50 kms in and around Chennai.
+                    Fast and efficient service / customer response backed by robust IT systems.
+                    Dedicated team of polite, courteous and responsible customer service personnel.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- =============================== End Page Content =========================== -->
     <!-- ========================== Start Footer Section ========================= -->
     <footer>
         <div class="container-fluid footer-top">
@@ -170,17 +133,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h4>About Us</h4>
-                        <p>
-                            Large team of experienced, reliable & professional drivers having thorough knowledge of the city.
-                            All our drivers have a minimum of 3+ years driving experience.
-                        </p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                     </div>
                     <div class="col-md-3">
                         <h4>Quick Links</h4>
                         <ul class="quick-link">
                             <li><a href="about.html"><i class="fa fa-angle-right"></i>About Us</a></li>
                             <li><a href="services.html"><i class="fa fa-angle-right"></i>Our Services</a></li>
-                            <!--<li><a href="hiredriver.html"><i class="fa fa-angle-right"></i>Driver Hire  </a></li>-->
+                            <li><a href="hiredriver.html"><i class="fa fa-angle-right"></i>Driver Hire  </a></li>
                             <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact  </a></li>
                         </ul>
                     </div>
