--- a/services.html
+++ b/services.html
@@ -27,44 +27,62 @@
 </head>
 <body>
     <!-- =============================== Start Header ======================== -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 site-logo">
-                    <img src="assets/images/logo-ghs.png" />
-                    <h4><span>Vision</span> <span>Drivers</span> </h4>
-                </div>
-                <div class="col-md-7 header-list">
-                    <ul>
-                        <li>
-                            <div class="header-icon phone-color"><i class="fas fa-phone-volume"></i></div>
-                            <div>
-                                <span>Call or Booking</span>
-                                <h5>237 433 33</h5>
-                            </div>
+	<header>
+		<div class="container-fluid top-header">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-xl-6 col-12 col-md-6">
+						<h5><span>Online Booking</span><i class="fas fa-globe"></i><a href="#">www.visiondrivers.in</a></h5>
+					</div>
+					<div class="col-xl-6 col-12 col-md-6">
+						<ul>
+							<li>Follow us on</li>
+							<li><a href="https://www.instagram.com/p/CMma8r3gRQH/?igshid=gbxq74q07swi" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/vvisiondrivers" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://twitter.com/vision_drivers?s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li>All over chennai</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5 site-logo col-sm-12">
+					<img src="assets/images/logo-ghs.png" />
+					<h4><span>Vision</span> <span>Drivers</span> </h4>
+				</div>
+				<div class="col-md-7 header-list">
+					<ul>
+						<li>
+							<div class="header-icon phone-color"><i class="fas fa-phone-volume"></i></div>
+							<div>
+								<span>Call or Booking</span>
+								<h5>237 433 33</h5>
+							</div>
 
-                        </li>
-                        <li>
-                            <div class="header-icon whatsapp-color"><i class="fab fa-whatsapp"></i></div>
-                            <div>
-                                <span>Call or Booking</span>
-                                <h5>98407 43333</h5>
-                            </div>
+						</li>
+						<li>
+							<div class="header-icon whatsapp-color"><i class="fab fa-whatsapp"></i></div>
+							<div>
+								<span>Call or Booking</span>
+								<h5>98407 43333</h5>
+							</div>
 
-                        </li>
-                        <li>
-                            <div class="header-icon web-color"><i class="fas fa-globe"></i></div>
-                            <div>
-                                <span>Online Booking</span>
-                                <h5>www.visiondrivers.com</h5>
-                            </div>
+						</li>
+						<li>
+							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
+							<div>
+								<span>Email</span>
+								<h5>vvisiondrivers@gmail.com</h5>
+							</div>
 
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
     <!-- =============================== End Header ======================== -->
     <!-- =============================== Start Nav ========================== -->
     <div class="menu-bg outer-layout container-fluid">
@@ -110,29 +128,38 @@
     <!-- =============================== Start Page Content =========================== -->
     <div class="container page-content">
         <div class="row">
-            <div class="col-md-12">
-                <h4>
-                    Driver Hire Services
-                </h4>
-                <p><b>City driving:</b> Ability to service a radius of 50 kms in and around the city</p>
-                <p><b>Outstation:</b> Ability to service outstation round trips, pick-up and drops to all major cities / towns in India.</p>
-                <p>
-                    <b>Office pick-up & drop:</b> Hire a driver for regular transfers from home to office in the morning and office to home in the evening in the comfort of your own car on a weekly or monthly basis.
-                </p>
-                <p>
-                    <b>Night drivers:</b> One way drop chauffeur service for customers need a driver to reach their home safely after a late evening / night party.
-                </p>
-                <p>
-                    <b>Permanent duty:</b> Rent a driver for a mutually agreed fixed monthly salary or on payment of a one-time finder’s fee.
-                </p>
-                <p>
-                    <b>Valet drivers:</b> Placement of experienced valet parking drivers for hotels, offices, functions and commercial establishments on per hour, daily, weekly or monthly basis.
-                </p>
-                <p>
-                    <b>Corporate drivers:</b> Placement of professionally qualified, well-etiquette car drivers for hire with formal company attire for managing your fleet of vehicles for any corporate occasions and also for regular day-to-day handling.
+			<div class="col-md-12 mb-4">
+				<h4>Call Taxi Services</h4>
+				<p><b>Local:</b> Ability to service local round trips</p>
+				<p><b>Outstation:</b> Ability to service outstation round trips</p>
+			</div>
+			<div class="col-md-12">
+				<h4>
+					Driver Hire Services
+				</h4>
+				<p><b>City driving:</b> Ability to service a radius of 50 kms in and around the city</p>
+				<p><b>Outstation:</b> Ability to service outstation round trips, pick-up and drops to all major cities / towns in India.</p>
+				<p>
+					<b>Office pick-up & drop:</b> Hire a driver for regular transfers from home to office in the morning and office to home in the evening in the comfort of your own car on a weekly or monthly basis.
+				</p>
+				<p>
+					<b>Night drivers:</b> One way drop chauffeur service for customers need a driver to reach their home safely after a late evening / night party.
+				</p>
+				<p>
+					<b>Permanent duty:</b> Rent a driver for a mutually agreed fixed monthly salary or on payment of a one-time finder’s fee.
+				</p>
+				<p>
+					<b>Valet drivers:</b> Placement of experienced valet parking drivers for hotels, offices, functions and commercial establishments on per hour, daily, weekly or monthly basis.
+				</p>
+				<p>
+					<b>Corporate drivers:</b> Placement of professionally qualified, well-etiquette car drivers for hire with formal company attire for managing your fleet of vehicles for any corporate occasions and also for regular day-to-day handling.
 
-                </p>
-            </div>
+				</p>
+				<p>
+					<b>Specialist </b> in R&D automobile industries, skilled, unskilled, semi skilled, super skilled
+
+				</p>
+			</div>
         </div>
     </div>
     <!-- =============================== End Page Content =========================== -->
@@ -164,7 +191,7 @@
                             <li>
                                 <i class="fab fa-whatsapp"></i>98407 43333
                             </li>
-                            <li><i class="fa fa-globe"></i>www.visiondrivers.com</li>
+                            <li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
                         </ul>
                     </div>
                 </div>
