--- a/about.html
+++ b/about.html
@@ -27,44 +27,62 @@
 </head>
 <body>
     <!-- =============================== Start Header ======================== -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 site-logo">
-                    <img src="assets/images/logo-ghs.png" />
-                    <h4><span>Vision</span> <span>Drivers</span> </h4>
-                </div>
-                <div class="col-md-7 header-list">
-                    <ul>
-                        <li>
-                            <div class="header-icon phone-color"><i class="fas fa-phone-volume"></i></div>
-                            <div>
-                                <span>Call or Booking</span>
-                                <h5>237 433 33</h5>
-                            </div>
+	<header>
+		<div class="container-fluid top-header">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-xl-6 col-12 col-md-6">
+						<h5><span>Online Booking</span><i class="fas fa-globe"></i><a href="#">www.visiondrivers.in</a></h5>
+					</div>
+					<div class="col-xl-6 col-12 col-md-6">
+						<ul>
+							<li>Follow us on</li>
+							<li><a href="https://www.instagram.com/p/CMma8r3gRQH/?igshid=gbxq74q07swi" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/vvisiondrivers" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://twitter.com/vision_drivers?s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li>All over chennai</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5 site-logo col-sm-12">
+					<img src="assets/images/logo-ghs.png" />
+					<h4><span>Vision</span> <span>Drivers</span> </h4>
+				</div>
+				<div class="col-md-7 header-list">
+					<ul>
+						<li>
+							<div class="header-icon phone-color"><i class="fas fa-phone-volume"></i></div>
+							<div>
+								<span>Call or Booking</span>
+								<h5>237 433 33</h5>
+							</div>
 
-                        </li>
-                        <li>
-                            <div class="header-icon whatsapp-color"><i class="fab fa-whatsapp"></i></div>
-                            <div>
-                                <span>Call or Booking</span>
-                                <h5>98407 43333</h5>
-                            </div>
+						</li>
+						<li>
+							<div class="header-icon whatsapp-color"><i class="fab fa-whatsapp"></i></div>
+							<div>
+								<span>Call or Booking</span>
+								<h5>98407 43333</h5>
+							</div>
 
-                        </li>
-                        <li>
-                            <div class="header-icon web-color"><i class="fas fa-globe"></i></div>
-                            <div>
-                                <span>Online Booking</span>
-                                <h5>www.visiondrivers.com</h5>
-                            </div>
+						</li>
+						<li>
+							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
+							<div>
+								<span>Email</span>
+								<h5>vvisiondrivers@gmail.com</h5>
+							</div>
 
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
     <!-- =============================== End Header ======================== -->
     <!-- =============================== Start Nav ========================== -->
     <div class="menu-bg outer-layout container-fluid">
@@ -154,7 +172,7 @@
                             <li>
                                 <i class="fab fa-whatsapp"></i>98407 43333
                             </li>
-                            <li><i class="fa fa-globe"></i>www.visiondrivers.com</li>
+                            <li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
                         </ul>
                     </div>
                 </div>
