--- a/index.html
+++ b/index.html
@@ -28,9 +28,27 @@
 <body>
     <!-- =============================== Start Header ======================== -->
     <header>
+		<div class="container-fluid top-header">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-xl-6 col-12 col-md-6">						
+						<h5><span>Online Booking</span><i class="fas fa-globe"></i><a href="#">www.visiondrivers.in</a></h5>
+					</div>
+					<div class="col-xl-6 col-12 col-md-6">
+						<ul>
+							<li>Follow us on</li>
+							<li><a href="https://www.instagram.com/p/CMma8r3gRQH/?igshid=gbxq74q07swi" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/vvisiondrivers" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://twitter.com/vision_drivers?s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li>All over chennai</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
         <div class="container">
             <div class="row">
-                <div class="col-md-5 site-logo">
+                <div class="col-md-5 site-logo col-sm-12">
                     <img src="assets/images/logo-ghs.png" />
                     <h4><span>Vision</span> <span>Drivers</span> </h4>
                 </div>
@@ -53,10 +71,10 @@
 
                         </li>
                         <li>
-                            <div class="header-icon web-color"><i class="fas fa-globe"></i></div>
+                            <div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
                             <div>
-                                <span>Online Booking</span>
-                                <h5>www.visiondrivers.com</h5>
+                                <span>Email</span>
+								<h5>vvisiondrivers@gmail.com</h5>
                             </div>
 
                         </li>
@@ -105,7 +123,7 @@
 
                 <div class="carousel-inner" role="listbox">
 
-                    <div class="carousel-item active" style="background-image: url(assets/images/slider1.jpg)">
+                    <div class="carousel-item active" style="background-image: url(assets/images/slider2.jpg)">
                         <div class="carousel-container">
                             <div class="container">
                                 <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
@@ -115,7 +133,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
+                    <div class="carousel-item" style="background-image: url(assets/images/slider3.jpg)">
                         <div class="carousel-container">
                             <div class="container">
                                 <h2 class="animate__animated animate__fadeInDown">Big Relief from City Traffic</h2>
@@ -128,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item" style="background-image: url(assets/images/slider1.jpg)">
+                    <div class="carousel-item" style="background-image: url(assets/images/slider2.jpg)">
                         <div class="carousel-container">
                             <div class="container">
                                 <h2 class="animate__animated animate__fadeInDown">Planning for an Outstation Trip</h2>
@@ -191,7 +209,7 @@
                             <li>
                                 <i class="fab fa-whatsapp"></i>98407 43333
                             </li>
-                            <li><i class="fa fa-globe"></i>www.visiondrivers.com</li>
+                            <li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
                         </ul>
                     </div>
                 </div>
