--- a/about.html
+++ b/about.html
@@ -128,6 +128,12 @@
     <!-- =============================== Start Page Content =========================== -->
     <div class="container page-content">
         <div class="row">
+			<div class="col-md-12 mb-3">
+				<h4>We are doing 3 types of business</h4>
+				<h6>1. Vision manpower solutions</h6>
+				<h6>2. Vision call taxi</h6>
+				<h6>3. Vision call drivers</h6>
+			</div>
             <div class="col-md-12">
                 <h4>Benefits of Hiring from Vision Drivers</h4>
                 <p>
