--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
 							<div>
 								<span>Email</span>
-								<h5>vvisiondrivers@gmail.com</h5>
+								<h5>Support@visiondrivers.in</h5>
 							</div>
 
 						</li>
@@ -129,13 +129,16 @@
     <div class="container page-content">
         <div class="row">
             <div class="col-md-12">
-                <ul class="contact-list">
-                    <li><i class="fa fa-phone-volume"></i>237 433 33</li>
-                    <li>
-                        <i class="fab fa-whatsapp"></i>98407 43333
-                    </li>
-                    <li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
-                </ul>
+				<ul class="contact-list">
+					<li><i class="fas fa-map-marker-alt"></i>Ramadas street 6/61 Velachery main</li>
+					<li><i class="fa fa-phone-volume" style="color:transparent !important"></i>Medavakkam</li>
+					<li><i class="fa fa-phone-volume" style="color:transparent !important"></i>600100</li>
+					<li><i class="fa fa-phone-volume"></i>237 433 33</li>
+					<li>
+						<i class="fab fa-whatsapp"></i>98407 43333
+					</li>
+					<li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
+				</ul>
             </div>
         </div>
     </div>
