--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
 							<div>
 								<span>Email</span>
-								<h5>Support@visiondrivers.in</h5>
+								<h5>support@visiondrivers.in</h5>
 							</div>
 
 						</li>
