Client Reviews update

--- a/services.html
+++ b/services.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Vision Drivers">
+	<meta name="keywords" content="Vision Drivers">
+	<meta name="author" content="Vision Drivers">
 	<title>Get Home Safely</title>
 	<link rel="apple-touch-icon" href="assets/images/ghsfav.png">
 
@@ -40,6 +43,7 @@
 							<li><a href="https://www.instagram.com/p/CMma8r3gRQH/?igshid=gbxq74q07swi" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							<li><a href="https://www.facebook.com/vvisiondrivers" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="https://twitter.com/vision_drivers?s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 							<li>All over chennai</li>
 						</ul>
 					</div>
@@ -70,14 +74,14 @@
 							</div>
 
 						</li>
-						<li>
+						<!--<li>
 							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
 							<div>
 								<span>Email</span>
 								<h5>support@visiondrivers.in</h5>
 							</div>
 
-						</li>
+						</li>-->
 					</ul>
 				</div>
 			</div>
@@ -88,7 +92,7 @@
 	<div class="menu-bg outer-layout container-fluid">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-8">
 					<nav class="main-nav d-none d-lg-block" id="mainnav">
 						<ul>
 							<li class=""><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
@@ -98,16 +102,19 @@
 							<!--<li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>-->
 							<li><a href="contact.html"><i class="far fa-address-book"></i>Contact  </a></li>
 							<!--<li class="drop-down">
-								<a href="#"><i class="fas fa-chart-line"></i>Reports </a>
-								<ul>
-									<li><a href="#"><i class="fas fa-arrow-right"></i>Donor List </a></li>
-									<li><a href="#"><i class="fas fa-arrow-right"></i>Donation Summary</a></li>
+					<a href="#"><i class="fas fa-chart-line"></i>Reports </a>
+					<ul>
+						<li><a href="#"><i class="fas fa-arrow-right"></i>Donor List </a></li>
+						<li><a href="#"><i class="fas fa-arrow-right"></i>Donation Summary</a></li>
 
-								</ul>
-							</li>-->
+					</ul>
+				</li>-->
 						</ul>
 
 					</nav>
+				</div>
+				<div class="col-md-4 text-right">
+					<a href="tel:98407 43333" class="btn btn-quickbook">Quik Booking</a>
 				</div>
 			</div>
 		</div>
@@ -128,43 +135,59 @@
 	<!-- =============================== Start Page Content =========================== -->
 	<div class="page-content">
 		<!--<div class="row">
-			<div class="col-md-12 mb-4">
-				<h4>Call Taxi Services</h4>
-				<p><b>Local:</b> Ability to service local round trips</p>
-				<p><b>Outstation:</b> Ability to service outstation round trips</p>
-			</div>
-			<div class="col-md-12">
-				<h4>
-					Driver Hire Services
-				</h4>
-				<p><b>City driving:</b> Ability to service a radius of 50 kms in and around the city</p>
-				<p><b>Outstation:</b> Ability to service outstation round trips, pick-up and drops to all major cities / towns in India.</p>
-				<p>
-					<b>Office pick-up & drop:</b> Hire a driver for regular transfers from home to office in the morning and office to home in the evening in the comfort of your own car on a weekly or monthly basis.
-				</p>
-				<p>
-					<b>Night drivers:</b> One way drop chauffeur service for customers need a driver to reach their home safely after a late evening / night party.
-				</p>
-				<p>
-					<b>Permanent duty:</b> Rent a driver for a mutually agreed fixed monthly salary or on payment of a one-time finder’s fee.
-				</p>
-				<p>
-					<b>Valet drivers:</b> Placement of experienced valet parking drivers for hotels, offices, functions and commercial establishments on per hour, daily, weekly or monthly basis.
-				</p>
-				<p>
-					<b>Corporate drivers:</b> Placement of professionally qualified, well-etiquette car drivers for hire with formal company attire for managing your fleet of vehicles for any corporate occasions and also for regular day-to-day handling.
+		<div class="col-md-12 mb-4">
+			<h4>Call Taxi Services</h4>
+			<p><b>Local:</b> Ability to service local round trips</p>
+			<p><b>Outstation:</b> Ability to service outstation round trips</p>
+		</div>
+		<div class="col-md-12">
+			<h4>
+				Driver Hire Services
+			</h4>
+			<p><b>City driving:</b> Ability to service a radius of 50 kms in and around the city</p>
+			<p><b>Outstation:</b> Ability to service outstation round trips, pick-up and drops to all major cities / towns in India.</p>
+			<p>
+				<b>Office pick-up & drop:</b> Hire a driver for regular transfers from home to office in the morning and office to home in the evening in the comfort of your own car on a weekly or monthly basis.
+			</p>
+			<p>
+				<b>Night drivers:</b> One way drop chauffeur service for customers need a driver to reach their home safely after a late evening / night party.
+			</p>
+			<p>
+				<b>Permanent duty:</b> Rent a driver for a mutually agreed fixed monthly salary or on payment of a one-time finder’s fee.
+			</p>
+			<p>
+				<b>Valet drivers:</b> Placement of experienced valet parking drivers for hotels, offices, functions and commercial establishments on per hour, daily, weekly or monthly basis.
+			</p>
+			<p>
+				<b>Corporate drivers:</b> Placement of professionally qualified, well-etiquette car drivers for hire with formal company attire for managing your fleet of vehicles for any corporate occasions and also for regular day-to-day handling.
 
-				</p>
-				<p>
-					<b>Specialist </b> in R&D automobile industries, skilled, unskilled, semi skilled, super skilled
+			</p>
+			<p>
+				<b>Specialist </b> in R&D automobile industries, skilled, unskilled, semi skilled, super skilled
 
-				</p>
-			</div>
-		</div>-->
+			</p>
+		</div>
+	</div>-->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 ">
-					<h6 class="mb-3">We are providing all types of vehicles like sedan suv and all luxury cars</h6>
+					<h6 class="mb-3">We are providing all types of vehicles like sedan suv, all luxury cars and specialist in - line add labours</h6>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="">
+					<div class="col-md-12 service-sections ">
+						<h4>Branches</h4>
+						<div class="row align-items-center">
+							<div class="col-xl-12">
+								Trichy, Coimbatore
+							</div>
+							
+						</div>
+
+					</div>
 				</div>
 			</div>
 		</div>
@@ -326,10 +349,10 @@
 										</div>
 									</div>
 									<!--<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-										<div class="services-thumbnail">
-											<img src="assets/images/call-driver-4.webp" alt="Vision drivers" />
-										</div>
-									</div>-->
+									<div class="services-thumbnail">
+										<img src="assets/images/call-driver-4.webp" alt="Vision drivers" />
+									</div>
+								</div>-->
 									<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
 										<div class="services-thumbnail">
 											<img src="assets/images/call-driver-5.jpg" alt="Vision drivers" />
@@ -368,6 +391,7 @@
 							<li><a href="services.html"><i class="fa fa-angle-right"></i>Our Services</a></li>
 							<!--<li><a href="hiredriver.html"><i class="fa fa-angle-right"></i>Driver Hire  </a></li>-->
 							<li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact  </a></li>
+							<li><a href="terms-condition.html"><i class="fa fa-angle-right"></i>Terms & Condition</a></li>
 						</ul>
 					</div>
 					<div class="col-md-3">
@@ -377,6 +401,7 @@
 							<li>
 								<i class="fab fa-whatsapp"></i>98407 43333
 							</li>
+							<li><i class="fas fa-envelope"></i>support@visiondrivers.in</li>
 							<li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
 						</ul>
 					</div>
@@ -387,7 +412,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<p>&copy; 2021. Vision Drivers copyrights. All Rights Reserved.</p>
+						<p>&copy; 2022. Vision Drivers copyrights. All Rights Reserved.</p>
 					</div>
 				</div>
 			</div>
