--- a/about.html
+++ b/about.html
@@ -1,29 +1,32 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Home Safely</title>
-    <link rel="apple-touch-icon" href="assets/images/ghsfav.png">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Vision Drivers">
+	<meta name="keywords" content="Vision Drivers">
+	<meta name="author" content="Vision Drivers">
+	<title>Get Home Safely</title>
+	<link rel="apple-touch-icon" href="assets/images/ghsfav.png">
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/ghsfav.png">
-    <!-- ========================== Start Default Get Home Safely Styles ======================== -->
-    <!-- Bootstrap 4.6.0 -->
-    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap 5.15.2 -->
-    <link href="assets/css/all.min.css" rel="stylesheet" />
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/ghsfav.png">
+	<!-- ========================== Start Default Get Home Safely Styles ======================== -->
+	<!-- Bootstrap 4.6.0 -->
+	<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<!-- Bootstrap 5.15.2 -->
+	<link href="assets/css/all.min.css" rel="stylesheet" />
 
-    <!-- ===================== End Default Get Home Safely Styles ======================== -->
-    <!-- ===================== Start Slider Style ============================== -->
-    <link href="assets/plugins/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
-    <!-- ===================== End Slider Style ============================== -->
-    <!-- Custom Styles -->
-    <link href="assets/css/ghs.theme.min.css" rel="stylesheet" />
-    <!-- =======================================================
-    * Website Name: Get Home Safely - v1.0.0
-    * Author: Vijay
-    ======================================================== -->
+	<!-- ===================== End Default Get Home Safely Styles ======================== -->
+	<!-- ===================== Start Slider Style ============================== -->
+	<link href="assets/plugins/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
+	<!-- ===================== End Slider Style ============================== -->
+	<!-- Custom Styles -->
+	<link href="assets/css/ghs.theme.min.css" rel="stylesheet" />
+	<!-- =======================================================
+	* Website Name: Get Home Safely - v1.0.0
+	* Author: Vijay
+	======================================================== -->
 </head>
 <body>
     <!-- =============================== Start Header ======================== -->
@@ -40,6 +43,7 @@
 							<li><a href="https://www.instagram.com/p/CMma8r3gRQH/?igshid=gbxq74q07swi" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							<li><a href="https://www.facebook.com/vvisiondrivers" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="https://twitter.com/vision_drivers?s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 							<li>All over chennai</li>
 						</ul>
 					</div>
@@ -70,14 +74,14 @@
 							</div>
 
 						</li>
-						<li>
+						<!--<li>
 							<div class="header-icon web-color"><i class="fas fa-envelope"></i></div>
 							<div>
 								<span>Email</span>
 								<h5>support@visiondrivers.in</h5>
 							</div>
 
-						</li>
+						</li>-->
 					</ul>
 				</div>
 			</div>
@@ -87,29 +91,32 @@
     <!-- =============================== Start Nav ========================== -->
     <div class="menu-bg outer-layout container-fluid">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <nav class="main-nav d-none d-lg-block" id="mainnav">
-                        <ul>
-                            <li class=""><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-                            <li><a href="about.html"><i class="fas fa-car"></i>About Us </a></li>
-                            <li><a href="services.html"><i class="fas fa-taxi"></i>Our Services  </a></li>
-                            <!--<li><a href="hiredriver.html"><i class="fas fa-user"></i>Driver Hire  </a></li>-->
-                            <!--<li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>-->
-                            <li><a href="contact.html"><i class="far fa-address-book"></i>Contact  </a></li>
-                            <!--<li class="drop-down">
-                                <a href="#"><i class="fas fa-chart-line"></i>Reports </a>
-                                <ul>
-                                    <li><a href="#"><i class="fas fa-arrow-right"></i>Donor List </a></li>
-                                    <li><a href="#"><i class="fas fa-arrow-right"></i>Donation Summary</a></li>
+			<div class="row">
+				<div class="col-md-8">
+					<nav class="main-nav d-none d-lg-block" id="mainnav">
+						<ul>
+							<li class=""><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
+							<li><a href="about.html"><i class="fas fa-car"></i>About Us </a></li>
+							<li><a href="services.html"><i class="fas fa-taxi"></i>Our Services  </a></li>
+							<!--<li><a href="hiredriver.html"><i class="fas fa-user"></i>Driver Hire  </a></li>-->
+							<!--<li><a href="#"><i class="fas fa-car-alt"></i>Cab Hire  </a></li>-->
+							<li><a href="contact.html"><i class="far fa-address-book"></i>Contact  </a></li>
+							<!--<li class="drop-down">
+					<a href="#"><i class="fas fa-chart-line"></i>Reports </a>
+					<ul>
+						<li><a href="#"><i class="fas fa-arrow-right"></i>Donor List </a></li>
+						<li><a href="#"><i class="fas fa-arrow-right"></i>Donation Summary</a></li>
 
-                                </ul>
-                            </li>-->
-                        </ul>
+					</ul>
+				</li>-->
+						</ul>
 
-                    </nav>
-                </div>
-            </div>
+					</nav>
+				</div>
+				<div class="col-md-4 text-right">
+					<a href="tel:98407 43333" class="btn btn-quickbook">Quik Booking</a>
+				</div>
+			</div>
         </div>
 
     </div>
@@ -137,7 +144,7 @@
             <div class="col-md-12">
                 <h4>Benefits of Hiring from Vision Drivers</h4>
                 <p>
-                    Large team of experienced, reliable & professional drivers having thorough knowledge of the city.
+                    Since 2008 large team of experienced, reliable & professional drivers having thorough knowledge of the city.
                     All our drivers have a minimum of 3+ years driving experience.
                     All our drivers on-call undergo a thorough background and criminal record check.
                     Ease of booking: Auto-IVR, Online & App booking facility for driver hire services.
@@ -164,22 +171,24 @@
                     </div>
                     <div class="col-md-3">
                         <h4>Quick Links</h4>
-                        <ul class="quick-link">
-                            <li><a href="about.html"><i class="fa fa-angle-right"></i>About Us</a></li>
-                            <li><a href="services.html"><i class="fa fa-angle-right"></i>Our Services</a></li>
-                            <!--<li><a href="hiredriver.html"><i class="fa fa-angle-right"></i>Driver Hire  </a></li>-->
-                            <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact  </a></li>
-                        </ul>
+						<ul class="quick-link">
+							<li><a href="about.html"><i class="fa fa-angle-right"></i>About Us</a></li>
+							<li><a href="services.html"><i class="fa fa-angle-right"></i>Our Services</a></li>
+							<!--<li><a href="hiredriver.html"><i class="fa fa-angle-right"></i>Driver Hire  </a></li>-->
+							<li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact  </a></li>
+							<li><a href="terms-condition.html"><i class="fa fa-angle-right"></i>Terms & Condition</a></li>
+						</ul>
                     </div>
                     <div class="col-md-3">
                         <h4>Contact Us</h4>
-                        <ul class="footer-contact">
-                            <li><i class="fa fa-phone-volume"></i>237 433 33</li>
-                            <li>
-                                <i class="fab fa-whatsapp"></i>98407 43333
-                            </li>
-                            <li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
-                        </ul>
+						<ul class="footer-contact">
+							<li><i class="fa fa-phone-volume"></i>237 433 33</li>
+							<li>
+								<i class="fab fa-whatsapp"></i>98407 43333
+							</li>
+							<li><i class="fas fa-envelope"></i>support@visiondrivers.in</li>
+							<li><i class="fa fa-globe"></i>www.visiondrivers.in</li>
+						</ul>
                     </div>
                 </div>
             </div>
@@ -188,7 +197,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>&copy; 2021. Vision Drivers copyrights. All Rights Reserved.</p>
+                        <p>&copy; 2022. Vision Drivers copyrights. All Rights Reserved.</p>
                     </div>
                 </div>
             </div>
